force-app/main/default/objects/Domicilio_de_Cliente__c/Domicilio_de_Cliente__c.object-meta.xml
<CustomObject>
    <label>Domicilio de Cliente</label>
    <nameField>
        <displayFormat>DC#{0}</displayFormat>
        <label>Otro Domicilio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Domicilio de Clientes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>