force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Domicilio de Clientes (Account)</relationshipLabel>
    <relationshipName>Domicilio_de_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>