force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <formula>TEXT(Cliente__r.Gerencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>