force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Centro_de_Distribucion__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Distribucion__c</fullName>
    <label>Centro de Distribución</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FS00 - Santiago Maulén</fullName>
            </value>
            <value>
                <fullName>FS02 - Coquimbo</fullName>
            </value>
            <value>
                <fullName>FS03 - Temuco</fullName>
            </value>
            <value>
                <fullName>FS04 - Concepción</fullName>
            </value>
            <value>
                <fullName>FS05 - Antofagasta</fullName>
            </value>
            <value>
                <fullName>FS06 - Puerto Montt</fullName>
            </value>
            <value>
                <fullName>FS07 - Iquique</fullName>
            </value>
            <value>
                <fullName>FS08 - Curicó</fullName>
            </value>
            <value>
                <fullName>FS09 - Calama</fullName>
            </value>
            <value>
                <fullName>FS10 - Paine</fullName>
            </value>
            <value>
                <fullName>FS11 - Tienda Vitacura</fullName>
            </value>
            <value>
                <fullName>FS12 - Tienda Rendic</fullName>
            </value>
            <value>
                <fullName>FS13 - Tienda Calama</fullName>
            </value>
            <value>
                <fullName>FSE1 - Bodegas Externas</fullName>
            </value>
            <value>
                <fullName>FSE2 Operador Logístico &quot;Loginsa&quot;</fullName>
            </value>
            <value>
                <fullName>FSE3 Frigorífico Icestar</fullName>
            </value>
            <value>
                <fullName>FSEX FS Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>