force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Otros Domicilios</relationshipLabel>
    <relationshipName>Otros_Domicilios</relationshipName>
    <type>Lookup</type>
</CustomField>