force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Cliente_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Despacho__c</fullName>
    <externalId>true</externalId>
    <label>Cliente Despacho</label>
    <length>60</length>
    <type>Text</type>
</CustomField>