force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Comuna_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna Despacho</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Domicilio de Clientes</relationshipLabel>
    <relationshipName>Domicilio_de_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>