force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Domicilio de Clientes</relationshipLabel>
    <relationshipName>Domicilio_de_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>