force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Contacto_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Comercial__c</fullName>
    <label>Nombre de Contacto Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>