force-app/main/default/objects/Domicilio_de_Cliente__c/fields/detalle_de_Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>detalle_de_Direcci_n__c</fullName>
    <label>detalle de Dirección</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>