force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Domicilio_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Adicional__c</fullName>
    <label>Domicilio Adicional</label>
    <type>Address</type>
</CustomField>