force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Email_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_Cliente__c</fullName>
    <formula>Cliente__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Cliente</label>
    <type>Text</type>
</CustomField>