force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Email_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Email_de_contacto__c</fullName>
    <label>Email de contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>