force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Email_de_Contacto_Pago__c.field-meta.xml
<CustomField>
    <fullName>Email_de_Contacto_Pago__c</fullName>
    <label>Email de Contacto Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>