force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Estado_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Estado_Domicilio__c</fullName>
    <label>Estado Domicilio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartera Activa</fullName>
            </value>
            <value>
                <fullName>Retención</fullName>
            </value>
            <value>
                <fullName>Fugados</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>