force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <formula>TEXT(Cliente__r.Gerencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerencia</label>
    <type>Text</type>
</CustomField>