force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Horario_de_Recepci_n_Minima__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Recepci_n_Minima__c</fullName>
    <formula>Cliente__r.Horario_de_Recepcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horario de Recepción Minima</label>
    <type>Time</type>
</CustomField>