force-app/main/default/objects/Domicilio_de_Cliente__c/fields/ICB_Update__c.field-meta.xml
<CustomField>
    <fullName>ICB_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICB_Update</label>
    <type>Checkbox</type>
</CustomField>