force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Latitud__c.field-meta.xml
<CustomField>
    <fullName>Latitud__c</fullName>
    <label>Latitud</label>
    <length>20</length>
    <type>Text</type>
</CustomField>