force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <label>Longitud</label>
    <length>20</length>
    <type>Text</type>
</CustomField>