force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Nombre_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Contacto__c</fullName>
    <formula>Cliente__r.Nombre_de_contacto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Contacto</label>
    <type>Text</type>
</CustomField>