force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Nombre_de_contacto_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_contacto_de_Pago__c</fullName>
    <label>Nombre de contacto de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>