force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Respuesta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_SAP__c</fullName>
    <label>Respuesta SAP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>