force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Tel_fono__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono__c</fullName>
    <formula>Cliente__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>