force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Tel_fono_de_Contacto_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_de_Contacto_Comercial__c</fullName>
    <label>Teléfono de Contacto Comercial</label>
    <length>9</length>
    <type>Text</type>
</CustomField>