force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Telefono_de_Contacto_Pago__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_Contacto_Pago__c</fullName>
    <label>Telefono de Contacto Pago</label>
    <length>9</length>
    <type>Text</type>
</CustomField>