force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Ventana_desde_1__c.field-meta.xml
<CustomField>
    <fullName>Ventana_desde_1__c</fullName>
    <label>Ventana desde 1</label>
    <type>TextArea</type>
</CustomField>