force-app/main/default/objects/Domicilio_de_Cliente__c/fields/Ventana_hasta_1__c.field-meta.xml
<CustomField>
    <fullName>Ventana_hasta_1__c</fullName>
    <label>Ventana hasta 1</label>
    <type>TextArea</type>
</CustomField>