force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/Cambio_de_propietarios.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_de_propietarios</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(ISchanged(OwnerId),
$Profile.Name &lt;&gt;&quot;Gerente&quot;,
$Profile.Name &lt;&gt;&quot;Sub Gerente de Negocio&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;Gerencia Superior&quot;)</errorConditionFormula>
    <errorMessage>No tiene permitido el cambio de propietario</errorMessage>
</ValidationRule>