force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/Evitar_creacion_sin_FS.validationRule-meta.xml
<ValidationRule>
    <fullName>Evitar_creacion_sin_FS</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Cliente__r.C_digo_de_cliente__c )&amp;&amp; isnew()</errorConditionFormula>
    <errorMessage>no es posible crear direccion si Cliente no posee FS Valido generado por SAP</errorMessage>
</ValidationRule>