force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/Largo_domicilio.validationRule-meta.xml
<ValidationRule>
    <fullName>Largo_domicilio</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Domicilio_Adicional__Street__s) &gt; 30</errorConditionFormula>
    <errorDisplayField>Domicilio_Adicional__Street__s</errorDisplayField>
    <errorMessage>Domicilio Adicional Dirección, no puede tener mas de 30 caracteres</errorMessage>
</ValidationRule>