force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/obligatoriedadRegionComuna.validationRule-meta.xml
<ValidationRule>
    <fullName>obligatoriedadRegionComuna</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Comuna_Despacho__c) || ISBLANK(TEXT(Region__c))</errorConditionFormula>
    <errorMessage>La región y la comuna son obligatorios para guardar el registro</errorMessage>
</ValidationRule>