force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/Regla_de_3_minutos.validationRule-meta.xml
<ValidationRule>
    <fullName>Regla_de_3_minutos</fullName>
    <active>false</active>
    <description>No permite la creación de Direcciones en menos de 3 minutos, tras la creación de las cuentas nuevas cuando llega el FS desde SAP</description>
    <errorConditionFormula>(ISNEW() &amp;&amp; (NOW() - Cliente__r.CreatedDate ) * 1440 &lt; 3) &amp;&amp; NOT(ISNULL( Cliente_Despacho__c ))</errorConditionFormula>
    <errorMessage>No se puede crear un registro antes de 3 minutos de creada la cuenta.</errorMessage>
</ValidationRule>