force-app/main/default/objects/Domicilio_de_Cliente__c/validationRules/ValidoModif.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidoModif</fullName>
    <active>false</active>
    <errorConditionFormula>and( not(isblank(PRIORVALUE(  Domicilio_Adicional__Street__s  ))), ISCHANGED(   Domicilio_Adicional__Street__s   ))</errorConditionFormula>
    <errorDisplayField>Domicilio_Adicional__Street__s</errorDisplayField>
    <errorMessage>No se puede modificar el domicilio ingresado</errorMessage>
</ValidationRule>