force-app/main/default/objects/Domicilio_de_Cliente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Despacho__c</columns>
    <columns>Cliente__c</columns>
    <columns>Nombre_de_Contacto__c</columns>
    <columns>Tel_fono__c</columns>
    <columns>Email_Cliente__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Centro_de_Distribucion__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cliente_Despacho__c</field>
        <operation>equals</operation>
        <value>FS13179-1</value>
    </filters>
    <label>All</label>
</ListView>