force-app/main/default/objects/Domicilio_de_Cliente__c/listViews/Copia_de_All.listView-meta.xml
<ListView>
    <fullName>Copia_de_All</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Despacho__c</columns>
    <columns>Cliente__c</columns>
    <columns>Nombre_de_Contacto__c</columns>
    <columns>Tel_fono__c</columns>
    <columns>Email_Cliente__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Centro_de_Distribucion__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis domicilios de clientes</label>
</ListView>